# temporal-practice-ground

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: settings.py
app/schemas/: schemas.py
app/services/: services.py
temporal/: activity.py  starter.py  worker.py  workflow.py
